Maint: Removed margin from ticket collection image at <450px to avoid horizontal scroll

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -673,6 +673,7 @@ footer h4 {
     #ticket-collection {
         height: 450px;
         width: 100%;
+        margin: 0px;
         padding: 5px;
         float: left;
     }
